# support-ops

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
knowledge_base/billing/: failed-payments.md  invoice-disputes.md  late-fees.md  plan-upgrades.md  refund-policy.md
knowledge_base/onboarding/: api-access.md  data-import.md  first-login.md  sso-setup.md  welcome-checklist.md
knowledge_base/payroll/: direct-deposit.md  garnishments.md  pay-frequency.md  paystub-missing.md  w2-forms.md
monday-webhook/: README.md  package-lock.json  package.json
monday-webhook/src/: index.js  index.test.js
scripts/: init_db.sql  run_simulation.py  seed_kb.py
supportops/: config.py  db.py  models.py  pipeline.py  store.py
supportops/api/: main.py  tickets.py  webhooks.py
supportops/dashboard/: app.py
supportops/integrations/: __init__.py  monday.py  zendesk.py
supportops/rag/: __init__.py  embedder.py  help_center.py  retriever.py  seed.py  store.py
supportops/simulator/: replay.py
supportops/triage/: __init__.py  classifier.py  prompts.py  responder.py  sentiment.py
tests/: conftest.py  test_api.py  test_integrations.py  test_pipeline.py  test_rag.py  test_triage.py
