[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportops"
version = "0.1.0"
description = "Ticket triage and help-center service that plugs Zendesk and Monday.com into a Claude-backed routing pipeline."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic[email]>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pgvector>=0.2.5,<1.0",
    "httpx>=0.27,<1.0",
    "anthropic>=0.34,<1.0",
    "openai>=1.30,<2.0",
    "langchain-core>=0.2,<1.0",
    "tenacity>=8.2,<10.0",
    "python-dotenv>=1.0,<2.0",
    "streamlit>=1.33,<2.0",
    "pandas>=2.2,<3.0",
    "altair>=5.3,<6.0",
    "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "respx>=0.21,<1.0",
    "ruff>=0.4,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["supportops*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
